@@ -1,3 +1,9 @@
+2009-06-13  Mike Krüger  <mkrueger@novell.com>
+
+	* Gui/CTextEditorExtension.cs: Applied patch "Bug 512617 -
+	  [PATCH] Deleting a selected line with Enter, got "Error in
+	  text editor extension chain.".
+
 2009-04-20  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* CLanguageBinding.cs:
